# starpost

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-to-slack.yml
config/: default_settings.yaml
docs/: PROGRAM_OVERVIEW.md  StarPost_Documentation.md  dev_install.md  packaging.md  release_notes_format.md  screenplay_plan.md
packaging/: AppRun  build_appimage.sh  starpost.desktop  starpost.iss  starpost.spec
scripts/: dev_run.py
src/starpost/: __init__.py  app.py
src/starpost/batch/: aggregator.py  job.py  queue.py
src/starpost/core/: macro_generator.py  plot_export.py  result_parser.py  settings.py  starccm_runner.py  updater.py
src/starpost/data/: models.py  portable.py  store.py
src/starpost/gui/: icons.py  main_window.py  theme.py  update.py  widgets.py
src/starpost/gui/resources/: theme.qss
src/starpost/gui/views/: data_export_dialog.py  data_list.py  export_dialog.py  file_list.py  log_console.py  plot_view.py  properties_dialog.py  report_table.py  scene_view.py  selection_panel.py  settings_dialog.py  welcome_dialog.py
src/starpost/macros/: extract_all.java.j2  render_scenes.java.j2
src/starpost/utils/: logging.py  paths.py
tests/: test_aggregator.py  test_export_dialog.py  test_gui_imports.py  test_main_window.py  test_plot_view.py  test_portable.py  test_result_parser.py  test_scenes.py  test_settings.py  test_starccm_runner.py  test_temp_files.py  test_text_scale.py  test_theme.py  test_update_flow.py  test_updater.py  test_widgets.py
