[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starpost"
version = "0.1.0"
description = "Automated post-processing for STAR-CCM+ reports and monitor plots"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Luca" }]
dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "numpy>=1.24",       # nearest-point hover search in the plot view
    "matplotlib>=3.8",   # used for PDF/JPG export rendering
    "pandas>=2.1",
    "PyYAML>=6.0",
    "Jinja2>=3.1",       # Java macro templating
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "pyinstaller>=6.0"]

[project.gui-scripts]
starpost = "starpost.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
starpost = ["macros/*.j2", "gui/resources/*.qss", "gui/resources/*.png"]

[tool.ruff]
line-length = 100
target-version = "py311"
